[tool.poetry]
name = "myansible"
version = "0.1.0"
description = ""
authors = ["FUKUDA Shoma <fkshom@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^2.10.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
